# benfoxall8

./: BUILD.gn  OAT.xml  README.md  README_zh.md  build.sh  bundle.json  hdf.rar  notification.rar  test_packages.gni
aafwk/aafwk_standard/: BUILD.gn
aafwk/aafwk_standard/ActsKillProcessWithAccountApi7/: BUILD.gn
aafwk/aafwk_standard/ActsKillProcessWithAccountApi7/ActsKillProcessWithAccountApi7Test/: BUILD.gn
aafwk/aafwk_standard/ActsKillProcessWithAccountApi7/ActsKillProcessWithAccountCloseApi7/: BUILD.gn
aafwk/aafwk_standard/abilitymanager/: BUILD.gn
aafwk/aafwk_standard/abilitymanager/actsamscallbackfifthscene/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/actsamscallbackfirstscene/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/actsamscallbackfourthscene/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/actsamscallbacksecondscene/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/actsamscallbackthirdscene/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/actsamstestfifthscene/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/actsamstestfirstscene/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/actsamstestfourthscene/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/actsamstestsecondscene/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/actsamstestthirdscene/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/clearmissionscallback/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/clearmissionspromise/: BUILD.gn  Test.json
aafwk/aafwk_standard/abilitymanager/hap/: sceneTestCallbackFive.hap  sceneTestCallbackFour.hap  sceneTestCallbackOne.hap  sceneTestCallbackThree.hap  sceneTestCallbackTwo.hap  sceneTestFive.hap  sceneTestFour.hap  sceneTestOne.hap  sceneTestThree.hap  sceneTestTwo.hap
aafwk/aafwk_standard/actsabilitydistributetest/: Test.json
aafwk/aafwk_standard/actsabilitymanageretstest/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsZipfileUnzipfileST/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsabilitymanager/amsMissionSnapshotTest/: Test.json
aafwk/aafwk_standard/amsabilitymanager/amsMissionSnapshotTestSingleton/: BUILD.gn
aafwk/aafwk_standard/amsabilitymanager/amsMissionSnapshotTestSingletonS/: BUILD.gn
aafwk/aafwk_standard/amsdatauriutils/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsgetabilityprocessinfo/: BUILD.gn
aafwk/aafwk_standard/amsgetabilityprocessinfo/actsprocessmanagejstest/: BUILD.gn
aafwk/aafwk_standard/amsmultiapp/MultiAppPage/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsmultiapp/MultiAppPageConnectService/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsmultiapp/MultiAppPageConnect_Service/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsmultiapp/MultiAppPagePermission/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsmultiapp/MultiAppPagePermission_Page/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsmultiapp/MultiAppPage_PSS/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsmultiapp/MultiAppPage_Page/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsmultiapp/MultiAppPage_Service/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsmultiapp/MultiAppSimultaneousOnline/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsmultiapp/MultiAppSimultaneousOnline_test/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsmultiapp/MultiAppTermination/: BUILD.gn  Test.json
aafwk/aafwk_standard/amsprocessmanageapi7/: BUILD.gn
aafwk/aafwk_standard/amszipfileunzipfilest/: BUILD.gn  Test.json
aafwk/aafwk_standard/context/: BUILD.gn  Test.json
aafwk/aafwk_standard/fa/: BUILD.gn
aafwk/aafwk_standard/featureability/: BUILD.gn  Test.json
aafwk/aafwk_standard/formmanager/: BUILD.gn
aafwk/aafwk_standard/fwkdataaccessor/: BUILD.gn  Test.json
aafwk/aafwk_standard/lanuageConfigapi7/: BUILD.gn
aafwk/aafwk_standard/setshowonlockscreen/: BUILD.gn
aafwk/aafwk_standard/stage/: BUILD.gn
aafwk/aafwk_standard/verifypermission/: BUILD.gn
aafwk/aafwk_standard/want/: BUILD.gn  Test.json
appexecfwk/bundle_standard/bundlemanager/: BUILD.gn  Test.json
security/deviceauth/deviceauth_basic_deps/: BUILD.gn  Test.json  device_auth_test.cpp  hc_alg_test.cpp  hc_condition_test.cpp  hc_dev_info_test.cpp  hc_file_common.cpp  hc_file_f_test.cpp  hc_file_iot_flash_test.cpp  hc_file_test.cpp  hc_file_utils_test.cpp  hc_mutex_test.cpp  hc_thread_test.cpp  hc_time_test.cpp  hctest.h  print_log.cpp  test_timer.cpp
security_lite/deviceauth_basic_deps/: BUILD.gn  deviceauth.gni  hc_alg_test.c  hc_alg_test_case.h  test.c
security_lite/hichain_posix0/: BUILD.gn
security_lite/hichain_posix0/src/: hichain_function_test.c
storage/: BUILD.gn
storage/storagedsmjstest/: BUILD.gn
storage/storagedsmstabilityjstest/: BUILD.gn  Test.json
storage/storageerrorjstest/: BUILD.gn  Test.json
storage/storageerrorjstest/hap/: entry-debug-rich-signed.hap
storage/storagefileconcurrentjstest/: BUILD.gn  Test.json
storage/storagefileconcurrentjstest/hap/: entry-debug-rich-signed.hap
storage/storagefileioerrorjstest/: BUILD.gn  Test.json
storage/storagefileiojstest/: BUILD.gn  Test.json
storage/storagefileiojstest/hap/: entry-debug-rich-signed.hap
storage/storagefileioperformancejstest/: BUILD.gn  Test.json
storage/storagefileioperformancejstest/hap/: entry-debug-rich-signed.hap
storage/storagefileioreliabilityjstest/: BUILD.gn  Test.json
storage/storagefileioreliabilityjstest/hap/: entry-debug-rich-signed.hap
storage/storagefileiostabilityjstest/: BUILD.gn  Test.json
storage/storagefileiostabilityjstest/hap/: entry-debug-rich-signed.hap
storage/storagefilejstest/: Test.json
storage/storagefilemanagerjstest/: Test.json
storage/storagefilestabilityjstest/: BUILD.gn  Test.json
storage/storagefilestabilityjstest/hap/: entry-debug-rich-signed.hap
storage/storagefmspublicjstest/: BUILD.gn
storage/storagefmssharejstest/: BUILD.gn  Test.json
storage/storagestatfsjstest/: BUILD.gn  Test.json
storage/storagestatisticsjstest/: BUILD.gn  Test.json
storage/storagevolumesjstest/: BUILD.gn  Test.json
telephony/telephonyjstest/sim/: BUILD.gn
(+4962 files in other folders)
