# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")

group("aafwk_standard") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "ActsAbilityLifecycleStateNewTest:ActsAbilityLifecycleStateNewTest",
      "ActsDataAbilityJsTest:ActsDataAbilityJsTest",
      "ActsKillProcessWithAccountApi7:ActsKillProcessWithAccountApi7",
      "ActsStServiceAbilityClientCaseTest:ActsStServiceAbilityClientCaseTest",
      "abilitymanager:actsabilitymanagertest",
      "actsabilitydistributetest:ActsAbilityDistributeTest",
      "actsabilitydistributetest:ActsAbilityDistributeTest",
      "actsabilitymanageretstest:ActsAbilityManagerEtsTest",
      "amsZipfileUnzipfileST:ActsZlibTest",
      "amsabilitymanager/amsMissionSnapshotTest:ActsAmsMissionSnapshotTest",
      "amsabilitymanager/amsMissionSnapshotTestSingleton:ActsAmsMissionSnapshotTestSingleton",
      "amsabilitymanager/amsMissionSnapshotTestSingletonS:ActsAmsMissionSnapshotTestSingletonS",
      "amsdatauriutils:ActsAmsDataUriUtilsTest",
      "amsgetabilityprocessinfo:amsgetabilityprocessinfo",
      "amsmultiapp/MultiAppPage:ActsAmsMultiPageApp",
      "amsmultiapp/MultiAppPageConnectService:ActsAmsMultiPageAppConnectService",
      "amsmultiapp/MultiAppPageConnect_Service:ActsAmsMultiAppPageConnectService",
      "amsmultiapp/MultiAppPagePermission:ActsAmsMultiPageAppPermission",
      "amsmultiapp/MultiAppPagePermission_Page:ActsAmsMultiAppPagePermission",
      "amsmultiapp/MultiAppPage_PSS:ActsAmsMultiPageAppS",
      "amsmultiapp/MultiAppPage_Page:ActsAmsMultiAppPage",
      "amsmultiapp/MultiAppPage_Service:ActsAmsMultiAppPageService",
      "amsmultiapp/MultiAppSimultaneousOnline:ActsAmsMultiAppSimultaneousOnline",
      "amsmultiapp/MultiAppSimultaneousOnline_test:ActsAmsMultiAppPageClone",
      "amsmultiapp/MultiAppTermination:ActsAmsMultiAppTermination",
      "amsmultiapp/MultiAppTermination_test:ActsAmsMultiAppPageCloneTermination",
      "amsmultiapp/amsmultiapppageexecutor:ActsAmsMultiAppPageExecutor",
      "amsmultiapp/amsmultiappserviceexecutor:ActsAmsMultiAppServiceExecutor",
      "amsmultiapp/amsmultiappservicestarter:ActsAmsMultiAppServiceStarter",
      "amsmultiapp/amsmultiapptester:ActsAmsMultiAppTester",
      "amsmultiapp/amsmultidataabilityclone:ActsAmsMultiDataAbilityClone",
      "amsmultiapp/amsmultidataabilityself:ActsAmsMultiDataAbilitySelf",
      "amsprocessmanageapi7:amsprocessmanageapi7",
      "context:context",
      "featureability:featureability",
      "formmanager:formmanager",
      "lanuageConfigapi7:lanuageConfigapi7",
      "serviceability/sceneProject/particlestartability:ParticleStartAbility",
      "serviceability/sceneProject/particletestserver:ParticleTestServer",
      "serviceability/stserviceabilityserver:amsStServiceAilityServer",
      "serviceability/stserviceabilityserversecond:ActsAmsStServiceAilityServerSecondTest",
      "setshowonlockscreen:setshowonlockscreen",
      "want:want",
    ]
  }
}
