# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

DEVICEAUTH_BASIC_DEPS_DIR =
    "//test/xts/acts/security_lite/deviceauth_basic_deps"

DEVICEAUTH_BASIC_DEPS_SOURCE = [
  "${DEVICEAUTH_BASIC_DEPS_DIR}/print_log.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/test_timer.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_file_test.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_mutex_test.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_file_f_test.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_thread_test.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_dev_info_test.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_condition_test.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_file_utils_test.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_file_iot_flash_test.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_time_test.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_file_common.c",
  "${DEVICEAUTH_BASIC_DEPS_DIR}/hc_alg_test.c",
]

DEVICEAUTH_BASIC_DEPS_INC = [
  "//base/iot_hardware/peripheral/interfaces/kits",
  "//utils/native/lite/include",  # utils_file.h ohos_types.h

  # alg test
  "//base/security/deviceauth/deps_adapter/key_management_adapter/interfaces",
  "//base/security/deviceauth/deps_adapter/os_adapter/interfaces",
  "//base/security/deviceauth/common_lib/interfaces",
  "//base/security/deviceauth/interfaces/innerkits",
]
