# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

ohos_js_hap_suite("StageExtensionServiceTest") {
  hap_profile = "./entry/src/main/config.json"
  deps = [
    ":stage_extension_service_assets",
    ":stage_extension_service_resources",
  ]
  ets2abc = true
  certificate_profile = "./signature/openharmony_sx.p7b"
  hap_name = "StageExtensionServiceTest"
}
ohos_js_assets("stage_extension_service_assets") {
  source_dir = "./entry/src/main/ets/MainAbility"
}
ohos_resources("stage_extension_service_resources") {
  sources = [ "./entry/src/main/resources" ]
  hap_profile = "./entry/src/main/config.json"
}
