# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")
module_output_path = "hits/ActsBundleNativeTest"

ohos_moduletest_suite("ActsBundleNativeTest") {
  module_out_path = module_output_path
  include_dirs =
      [ "//foundation/appexecfwk/standard/kits/appkit/native/bundle/include" ]
  sources = [ "ActsBundleNativeTest.cpp" ]
  deps = [
    "//foundation/appexecfwk/standard/kits/appkit/native/bundle:bundle_ndk",
  ]
}
